infra/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: ntfy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      containers:
        - name: ntfy
          image: "binwiederhier/ntfy:v2.8.0"
          args: ["serve"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              cpu: "10m"
              memory: "10Mi"
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: "/etc/ntfy"
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: config
          configMap:
            name: ntfy
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
---
# Basic service for port 80
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - name: http
      port: 80
      targetPort: 80
