infra/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
    - webquic
  routes:
    - match: "Host(`ntfy.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: ntfy
          port: http
  tls:
    secretName: cert-k-joshuachp-dev
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
